--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Codes.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -52,6 +53,7 @@
     </Compile>
     <Compile Include="Keyboard.cs" />
     <Compile Include="KeyHook.cs" />
+    <Compile Include="KeyInput.cs" />
     <Compile Include="OfflineDictionary.cs" />
     <Compile Include="OnlineDictionary.cs" />
     <Compile Include="Program.cs" />
